--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,8 +53,14 @@
                         </button>
                     </div>
                 </form>
+
+                <!-- Botão de alternar tema -->
+                <button id="theme-toggle" class="btn btn-link text-decoration-none ms-3" title="Alternar tema">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
             
+            <!-- Menu mobile -->
             <div class="d-lg-none" id="mobileMenu" style="display: none;">
                 <div class="d-flex flex-column bg-white p-2 rounded shadow mt-2">
                     <a class="nav-link" asp-controller="Estudantes" asp-action="Index">
